--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #ec9727;
+$primary   : #fd19f2;
 $secondary : #7e7e7e;
 $accent    : #9C27B0;
 
